[2018-05-25 19:21:44 +0200]  Ready for testing                                                          karasu      {a005b7e6}
[2018-05-25 11:00:02 +0200]  Working on it. We need a list of partitions, not devices                   karasu      {7aeaed48}
[2018-05-24 20:32:33 +0200]  Adding a new cache page                                                    karasu      {346fb300}